apps/prod/argos-radar/middleware-https.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: argos-radar
spec:
  redirectScheme:
    scheme: https
    permanent: true
