apps/prod/argos-radar/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: argos-radar-backend
  namespace: argos-radar
  labels:
    app.kubernetes.io/name: argos-radar-backend
    app.kubernetes.io/part-of: argos-radar
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: argos-radar-backend
  ports:
    - port: 8080
      targetPort: 8000
      protocol: TCP
