apps/prod/argos-radar/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: argos-radar-frontend
  namespace: argos-radar
  labels:
    app.kubernetes.io/name: argos-radar-frontend
    app.kubernetes.io/part-of: argos-radar
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: argos-radar-frontend
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
