apps/prod/argos-radar/redis-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: argos-radar-redis
  namespace: argos-radar
  labels:
    app.kubernetes.io/name: argos-radar-redis
    app.kubernetes.io/part-of: argos-radar
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: argos-radar-redis
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
