apps/prod/argos-radar/backend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argos-radar-backend-ingress
  namespace: argos-radar
  labels:
    app.kubernetes.io/name: argos-radar-backend-ingress
    app.kubernetes.io/part-of: argos-radar
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: argos-radar-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.argos.rbx.ia.br
      secretName: argos-radar-backend-tls
  rules:
    - host: api.argos.rbx.ia.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argos-radar-backend
                port:
                  number: 8080
